--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">WAG Noticias</a>
+    <%= link_to 'WAG Noticias', root_path, class: "navbar-brand"%>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,6 +10,9 @@
         
         <li class="nav-item">
           <%= link_to 'Posts', posts_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'New Post', new_post_path, class: "nav-link"%>
         </li>
         
         
