--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,28 @@
         <li class="nav-item">
           <%= link_to 'New Post', new_post_path, class: "nav-link"%>
         </li>
+
+
+
+        <li class="nav-item">
+          <%= link_to 'Sign up', new_post_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign in', new_post_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign out', new_post_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Edit User', new_post_path, class: "nav-link"%>
+        </li>
+
+
+
+
+
+
+
         
         
       </ul>
