--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,24 +11,28 @@
         <li class="nav-item">
           <%= link_to 'Posts', posts_path, class: "nav-link"%>
         </li>
+       
+
+
+        <% if user_signed_in?%>
         <li class="nav-item">
           <%= link_to 'New Post', new_post_path, class: "nav-link"%>
         </li>
-
-
-
         <li class="nav-item">
-          <%= link_to 'Sign up', new_post_path, class: "nav-link"%>
+          <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to 'Sign in', new_post_path, class: "nav-link"%>
+          <%= link_to 'Edit User', edit_user_registration_path, class: "nav-link"%>
+        </li> 
+        
+        <% else%>
+        <li class="nav-item">
+          <%= link_to 'Sign up', new_user_registration_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to 'Sign out', new_post_path, class: "nav-link"%>
+          <%= link_to 'Sign in', new_user_session_path, class: "nav-link"%>
         </li>
-        <li class="nav-item">
-          <%= link_to 'Edit User', new_post_path, class: "nav-link"%>
-        </li>
+        <%end%>
 
 
 
