--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,17 +1,13 @@
 <div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
-
-  <p>
-    <strong>Body:</strong>
-    <%= post.body %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= post.user_id %>
-  </p>
+  <div class="card mb-3 mx-3" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= post.title %></h5>
+    <h6 class="card-subtitle mb-2 text-body-secondary"><%= post.user_id %></h6>
+    <p class="card-text"><%= post.body %></p>
+    <%= link_to "Show this post", post %>
+    
+  </div>
+</div>
 
 </div>
+
