--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg mb-3 mx-3">
   <div class="container-fluid">
     <%= link_to 'WAG Noticias', root_path, class: "navbar-brand"%>
     
