--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,52 +1,40 @@
 <nav class="navbar navbar-expand-lg mb-3 mx-3">
   <div class="container-fluid">
     <%= link_to 'WAG Noticias', root_path, class: "navbar-brand"%>
-    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
         <li class="nav-item">
           <%= link_to 'Posts', posts_path, class: "nav-link"%>
         </li>
-       
-
-
         <% if user_signed_in?%>
-        <li class="nav-item">
-          <%= link_to 'New Post', new_post_path, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Edit User', edit_user_registration_path, class: "nav-link"%>
-        </li> 
-        
+          <li class="nav-item">
+            <%= link_to 'New Post', new_post_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Edit User', edit_user_registration_path, class: "nav-link"%>
+          </li>
         <% else%>
-        <li class="nav-item">
-          <%= link_to 'Sign up', new_user_registration_path, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Sign in', new_user_session_path, class: "nav-link"%>
-        </li>
+          <li class="nav-item">
+            <%= link_to 'Sign up', new_user_registration_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign in', new_user_session_path, class: "nav-link"%>
+          </li>
         <%end%>
-
-
-
-
-
-
-
-        
-        
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="mx-3">
+      <h6>Welcome <%=current_user.email%>, user ID:<%=current_user.id%>  </h6>
+      </div>
+      <%= form_with url: posts_path, method: :get do |form|%>
+        <%= form.text_field :query_text, placeholder: 'Title or body', value: params[:query_text]%>
+        <button class="btn btn-outline-info" type="submit">Search</button>
+      <%end%>
     </div>
   </div>
 </nav>
