actualizacion de home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<div class="card mb-3 mx-3">
+  <div class="card-body">
+    <h1>Welcome to WAG Noticias</h1>
+<p>A place where you can post news</p>
+  </div>
+</div>
